# freertos-perfetto-trace-sample

./: CMakeLists.txt  README.md  main.c  trace_freertos.c  trace_freertos.h  trace_port_rcar_gen5.h
tools/: uart_to_perfetto.py
